--- a/assignments/hw1/main.tex
+++ b/assignments/hw1/main.tex
@@ -1,21 +1,21 @@
 \documentclass[11pt, oneside]{article}   	% use "amsart" instead of "article" for AMSLaTeX format
+\usepackage[mathscr]{euscript}
 
-% Language setting
 \usepackage[utf8]{inputenc}
 \usepackage[bulgarian]{babel}
-
-
-\usepackage{geometry}                		% See geometry.pdf to learn the layout options. There are lots.
-\geometry{letterpaper}                   		% ... or a4paper or a5paper or ...
-\usepackage[parfill]{parskip}    			% Activate to begin paragraphs with an empty line rather than an indent
-\usepackage{graphicx}				% Use pdf, png, jpg, or epsÂ§ with pdflatex; use eps in DVI mode
-								% TeX will automatically convert eps --> pdf in pdflatex
-\usepackage{amssymb}
+\usepackage[parfill]{parskip}
+\usepackage{graphicx}
 \usepackage{mathtools}
 \usepackage{enumerate}
 \usepackage{multicol}
 \usepackage{tikz}
 \usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{calligra}
+\usepackage{calrsfs}
+\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
+\geometry{letterpaper}
 
 \usetikzlibrary{arrows}
 
@@ -25,10 +25,7 @@
 
 \setcounter{MaxMatrixCols}{40}
 
-%SetFonts
-
-%SetFonts
-
+\DeclareMathAlphabet{\mathcalligra}{T1}{calligra}{m}{n}
 
 \title{Домашна работа 1 \\ {\Large Увод в теория на кодирането}}
 \author{Кристиян Стоименов \\ {ф.н 3MI0400121, ФМИ}}
@@ -55,7 +52,7 @@
 \end{itemize}
 \end{multicols}
 
-Следователно числата $1, 3, 4, 5, 9$ са \textit{квадратични остатъци}, а $2, 6, 7, 8, 10$ - \textit{неостатъци}. 0 не считаме нито за остатък, нито за неостатък. Използвайки следната дефиницията на характеристична функция, \[\chi(i)=\begin{cases*}
+Следователно числата $1, 3, 4, 5, 9$ са \textit{квадратични остатъци}, а $2, 6, 7, 8, 10$ - \textit{неостатъци}. 0 не считаме нито за остатък, нито за неостатък. Използвайки следната дефиниция за характеристична функция, \[\chi(i)=\begin{cases*}
 1& когато и е квадратичен остатък по $(mod\ p)$,\\
 -1& когато не е квадратичен остатък по $(mod\ p)$,\\
 0& когато $p\ |\ i$
@@ -101,7 +98,7 @@ $ = $\begin{pmatrix}
 \end{pmatrix}
 \end{center}
 
-\newline
+\bigskip
 
 За да съставим Адамарова матрица от ред 16, използваме метода на Силвестър. Знаем, че $A_{1} = (1)$ е Адамарова и поради това, можем да конструираме $A_{2} = $\begin{pmatrix}
 $A_{1}$ & $A_{1}$ \\
@@ -155,5 +152,172 @@ $A_{8}$ & $-A_{8}$
 1 & -1 & 1  & -1 & -1 & 1 & -1 & 1   & -1 & 1   & -1  & 1   & 1 & -1 & 1 & -1 \\
 1 & 1  & -1 & -1 & -1 & -1 & 1 & 1   & -1 & -1  & 1   & 1   & 1 & 1 & -1 & -1
 \end{pmatrix}
+
+\bigskip
+
+За да съставим оптималните нелинейни кодове с дължини 10, 11 и 12, използваме получената Адамарова матрица от ред 12. След като я нормализираме можем директно да изведем Адамаровите кодове $\mathcal{A}_{11}$, $\mathcal{B}_{10}$, $\mathcal{D}_{12}$:
+
+Нормализирана матрицата $A_{12}$ изглежда така:
+$B_{12} = $\begin{pmatrix}
+1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 \\
+1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 \\
+0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 \\
+1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 \\
+1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 \\
+1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 \\
+0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 \\
+0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 \\
+0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 \\
+1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 \\
+0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1
+\end{pmatrix}.
+
+$\mathcal{A}_{11}$ е (11, 12, 6) код и изглежда по следния начин:
+$\mathcal{A}_{11} = $\begin{pmatrix}
+0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 \\
+1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 \\
+1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 \\
+0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 \\
+1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 \\
+1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 \\
+1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 \\
+0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 \\
+0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 \\
+0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 \\
+1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1
+\end{pmatrix}.
+
+\smallskip
+
+$\mathcal{D}_{12}$ е (12, 24, 6) код и изглежда по следния начин:
+$\mathcal{D}_{12} = $\begin{pmatrix}
+0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 \\
+1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 \\
+1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 \\
+0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 \\
+1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 \\
+1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 0 \\
+1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 \\
+0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 \\
+0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 \\
+0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 \\
+1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 \\
+1 & 0 & 1 & 1 & 1 & 0 & 0 & 0 & 1 & 0 \\
+0 & 1 & 0 & 1 & 1 & 1 & 0 & 0 & 0 & 1 \\
+0 & 0 & 1 & 0 & 1 & 1 & 1 & 0 & 0 & 0 \\
+1 & 0 & 0 & 1 & 0 & 1 & 1 & 1 & 0 & 0 \\
+0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 1 & 0 \\
+0 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 1 \\
+0 & 0 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 \\
+1 & 0 & 0 & 0 & 1 & 0 & 0 & 1 & 0 & 1 \\
+1 & 1 & 0 & 0 & 0 & 1 & 0 & 0 & 1 & 0 \\
+1 & 1 & 1 & 0 & 0 & 0 & 1 & 0 & 0 & 1 \\
+0 & 1 & 1 & 1 & 0 & 0 & 0 & 1 & 0 & 0
+\end{pmatrix}.
+
+\smallskip
+
+$\mathcal{B}_{10}$ е (10, 6, 6) код и изглежда по следния начин:
+$\mathcal{B}_{10} = $\begin{pmatrix}
+1 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 1 \\
+1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 \\
+1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 \\
+0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 & 1 \\
+0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 0 \\
+\end{pmatrix}.
+
+\bigskip
+
+За да съставим оптималните нелинейни кодове с дължини 14, 15 и 16, използваме получената Адамарова матрица от ред 16. След като я нормализираме можем директно да изведем Адамаровите кодове $\mathcal{A}_{15}$, $\mathcal{B}_{14}$, $\mathcal{D}_{16}$:
+
+Нормализирана матрицата $A_{16}$ изглежда така:
+$B_{16} = $\begin{pmatrix}
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 \\
+0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 \\
+0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 \\
+0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 \\
+0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 \\
+0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 \\
+0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 \\
+0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 \\
+0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 \\
+0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1
+\end{pmatrix}.
+
+\smallskip
+
+$\mathcal{A}_{15}$ е (15, 16, 8) код и изглежда по следния начин:
+$\mathcal{A}_{15} = $\begin{pmatrix}
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 \\
+0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 \\
+1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 \\
+0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 \\
+0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 \\
+1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+1 & 0 & 1 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 \\
+0 & 1 & 1 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 \\
+1 & 1 & 0 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 \\
+0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+1 & 0 & 1 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 \\
+0 & 1 & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1
+\end{pmatrix}.
+
+\smallskip
+
+$\mathcal{B}_{14}$ е (14, 8, 8) код и изглежда по следния начин:
+$\mathcal{B}_{10} = $\begin{pmatrix}
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 \\
+0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 \\
+0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+1 & 1 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 \\
+0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+1 & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1
+\end{pmatrix}.
+
+\smallskip
+
+$\mathcal{D}_{12}$ е (12, 24, 8) код и изглежда по следния начин:
+$\mathcal{D}_{12} = $\begin{pmatrix}
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 \\
+0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 \\
+1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 \\
+0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 \\
+0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 \\
+1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+1 & 0 & 1 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 \\
+0 & 1 & 1 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 \\
+1 & 1 & 0 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 \\
+0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+1 & 0 & 1 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 \\
+0 & 1 & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 0 \\
+1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 \\
+0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 \\
+1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 \\
+0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 \\
+1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 \\
+0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+0 & 1 & 0 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 \\
+1 & 0 & 0 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 \\
+0 & 0 & 1 & 1 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 \\
+1 & 1 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+0 & 1 & 0 & 0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 0 \\
+1 & 0 & 0 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 1 & 1 & 0 & 0
+\end{pmatrix}.
 
 \end{document}
