--- a/assignments/hw2/solution.tex
+++ b/assignments/hw2/solution.tex
@@ -419,9 +419,9 @@ a_5 &= y_1 + y_2 = y_3 + y_4 = y_5 + y_6 = y_7 + y_8 = y_9 + y_{10} = y_{11} + y
 \section*{Задача 5}
 Да се декодират следните вектори чрез постъпково мажоритарно декодиране, приложено върху $RM(1, 3)$ код:
 \begin{itemize}
-  \item $y = 1011 1010$
-  \item $z = 1001 1001$
-  \item $t = 0111 0111$
+  \item $y = (10111010)$
+  \item $z = (10011001)$
+  \item $t = (01110111)$
 \end{itemize}
 
 \textbf{Решение:}
@@ -432,7 +432,7 @@ $P_0 = (000)$, $P_1 = (001)$, $P_2 = (010)$, $P_3 = (011)$, $P_4 = (100)$, $P_5 
 Нека разглеждаме получените вектори като характеристични вектори на подмножество от точки от афинната геометрия $AG(3, 2)$.
 \begin{align*}
 M_{y} &= \{P_0,P_2,P_3,P_4,P_6\} \subset AG(3, 2), \\
-M_{z} &= \{P_0,P_3,P_4,P_7\} \subset AG(3, 2), \\
+M_{z} &= \{P_0,P_3,P_4,P_7\} \subset AG(3, 2), \\ 
 M_{t} &= \{P_1,P_2,P_3,P_5,P_6,P_7\} \subset AG(3, 2)
 \end{align*}
 
@@ -444,96 +444,34 @@ M_{t} &= \{P_1,P_2,P_3,P_5,P_6,P_7\} \subset AG(3, 2)
 
 За изпратени кодови думи получаваме съответно
 \begin{align*}
-a_{y} &= (), \\
-a_{z} &= (), \\
-a_{t} &= ().
+a_{y} &= (00010000), \\
+a_{z} &= (10011001), \\ 
+a_{t} &= (????????).
 \end{align*}
+
+При $a_{t}$ грешките са твърде много, за да определим изпратената дума.
 
 \textit{Споменатите таблици се намират на следващата страница.}
 
-\begin{table}
+\begin{table} 
 \begin{minipage}[t]{.3\textwidth}
 \begin{tabular}{cccc}
 \toprule
 \textbf{Равнина} & \textbf{$M_{y}$} & \textbf{$M_{z}$} & \textbf{$M_{t}$}\\
 \midrule
 $ P_{0}, P_{1}, P_{2}, P_{3} $ & 1 & 0 & 1 \\
-$ P_{0}, P_{1}, P_{2}, P_{4} $ & 1 & 0 & 0 \\
-$ P_{0}, P_{1}, P_{2}, P_{5} $ & 0 & 1 & 1 \\
-$ P_{0}, P_{1}, P_{2}, P_{6} $ & 1 & 1 & 1 \\
-$ P_{0}, P_{1}, P_{2}, P_{7} $ & 0 & 0 & 1 \\
-$ P_{0}, P_{1}, P_{3}, P_{4} $ & 1 & 1 & 0 \\
-$ P_{0}, P_{1}, P_{3}, P_{5} $ & 0 & 0 & 1 \\
-$ P_{0}, P_{1}, P_{3}, P_{6} $ & 1 & 0 & 1 \\
-$ P_{0}, P_{1}, P_{3}, P_{7} $ & 0 & 1 & 1 \\
 $ P_{0}, P_{1}, P_{4}, P_{5} $ & 0 & 0 & 0 \\
-$ P_{0}, P_{1}, P_{4}, P_{6} $ & 1 & 0 & 0 \\
-$ P_{0}, P_{1}, P_{4}, P_{7} $ & 0 & 1 & 0 \\
-$ P_{0}, P_{1}, P_{5}, P_{6} $ & 0 & 1 & 1 \\
-$ P_{0}, P_{1}, P_{5}, P_{7} $ & 1 & 0 & 1 \\
 $ P_{0}, P_{1}, P_{6}, P_{7} $ & 0 & 0 & 1 \\
-$ P_{0}, P_{2}, P_{3}, P_{4} $ & 0 & 1 & 0 \\
-$ P_{0}, P_{2}, P_{3}, P_{5} $ & 1 & 0 & 1 \\
-$ P_{0}, P_{2}, P_{3}, P_{6} $ & 0 & 0 & 1 \\
-$ P_{0}, P_{2}, P_{3}, P_{7} $ & 1 & 1 & 1 \\
-$ P_{0}, P_{2}, P_{4}, P_{5} $ & 1 & 0 & 0 \\
 $ P_{0}, P_{2}, P_{4}, P_{6} $ & 0 & 0 & 0 \\
-$ P_{0}, P_{2}, P_{4}, P_{7} $ & 1 & 1 & 0 \\
-$ P_{0}, P_{2}, P_{5}, P_{6} $ & 1 & 1 & 1 \\
 $ P_{0}, P_{2}, P_{5}, P_{7} $ & 0 & 0 & 1 \\
-$ P_{0}, P_{2}, P_{6}, P_{7} $ & 1 & 0 & 1 \\
-$ P_{0}, P_{3}, P_{4}, P_{5} $ & 1 & 1 & 0 \\
-$ P_{0}, P_{3}, P_{4}, P_{6} $ & 0 & 1 & 0 \\
 $ P_{0}, P_{3}, P_{4}, P_{7} $ & 1 & 0 & 0 \\
 $ P_{0}, P_{3}, P_{5}, P_{6} $ & 1 & 0 & 1 \\
-$ P_{0}, P_{3}, P_{5}, P_{7} $ & 0 & 1 & 1 \\
-$ P_{0}, P_{3}, P_{6}, P_{7} $ & 1 & 1 & 1 \\
-$ P_{0}, P_{4}, P_{5}, P_{6} $ & 1 & 0 & 0 \\
-$ P_{0}, P_{4}, P_{5}, P_{7} $ & 0 & 1 & 0 \\
-$ P_{0}, P_{4}, P_{6}, P_{7} $ & 1 & 1 & 0 \\
-$ P_{0}, P_{5}, P_{6}, P_{7} $ & 0 & 0 & 1 \\
-\bottomrule
-\end{tabular}
-\end{minipage} \hfill
-\begin{minipage}[t]{.3\textwidth}
-\begin{tabular}{cccc}
-\toprule
-\textbf{Равнина} & \textbf{$M_{y}$} & \textbf{$M_{z}$} & \textbf{$M_{t}$}\\
-\midrule
-$ P_{1}, P_{2}, P_{3}, P_{4} $ & 1 & 0 & 1 \\
-$ P_{1}, P_{2}, P_{3}, P_{5} $ & 0 & 1 & 0 \\
-$ P_{1}, P_{2}, P_{3}, P_{6} $ & 1 & 1 & 0 \\
-$ P_{1}, P_{2}, P_{3}, P_{7} $ & 0 & 0 & 0 \\
-$ P_{1}, P_{2}, P_{4}, P_{5} $ & 0 & 1 & 1 \\
-$ P_{1}, P_{2}, P_{4}, P_{6} $ & 1 & 1 & 1 \\
 $ P_{1}, P_{2}, P_{4}, P_{7} $ & 0 & 0 & 1 \\
 $ P_{1}, P_{2}, P_{5}, P_{6} $ & 0 & 0 & 0 \\
-$ P_{1}, P_{2}, P_{5}, P_{7} $ & 1 & 1 & 0 \\
-$ P_{1}, P_{2}, P_{6}, P_{7} $ & 0 & 1 & 0 \\
-$ P_{1}, P_{3}, P_{4}, P_{5} $ & 0 & 0 & 1 \\
 $ P_{1}, P_{3}, P_{4}, P_{6} $ & 1 & 0 & 1 \\
-$ P_{1}, P_{3}, P_{4}, P_{7} $ & 0 & 1 & 1 \\
-$ P_{1}, P_{3}, P_{5}, P_{6} $ & 0 & 1 & 0 \\
 $ P_{1}, P_{3}, P_{5}, P_{7} $ & 1 & 0 & 0 \\
-$ P_{1}, P_{3}, P_{6}, P_{7} $ & 0 & 0 & 0 \\
-$ P_{1}, P_{4}, P_{5}, P_{6} $ & 0 & 1 & 1 \\
-$ P_{1}, P_{4}, P_{5}, P_{7} $ & 1 & 0 & 1 \\
-$ P_{1}, P_{4}, P_{6}, P_{7} $ & 0 & 0 & 1 \\
-$ P_{1}, P_{5}, P_{6}, P_{7} $ & 1 & 1 & 0 \\
 $ P_{2}, P_{3}, P_{4}, P_{5} $ & 1 & 0 & 1 \\
-$ P_{2}, P_{3}, P_{4}, P_{6} $ & 0 & 0 & 1 \\
-$ P_{2}, P_{3}, P_{4}, P_{7} $ & 1 & 1 & 1 \\
-$ P_{2}, P_{3}, P_{5}, P_{6} $ & 1 & 1 & 0 \\
-$ P_{2}, P_{3}, P_{5}, P_{7} $ & 0 & 0 & 0 \\
 $ P_{2}, P_{3}, P_{6}, P_{7} $ & 1 & 0 & 0 \\
-$ P_{2}, P_{4}, P_{5}, P_{6} $ & 1 & 1 & 1 \\
-$ P_{2}, P_{4}, P_{5}, P_{7} $ & 0 & 0 & 1 \\
-$ P_{2}, P_{4}, P_{6}, P_{7} $ & 1 & 0 & 1 \\
-$ P_{2}, P_{5}, P_{6}, P_{7} $ & 0 & 1 & 0 \\
-$ P_{3}, P_{4}, P_{5}, P_{6} $ & 1 & 0 & 1 \\
-$ P_{3}, P_{4}, P_{5}, P_{7} $ & 0 & 1 & 1 \\
-$ P_{3}, P_{4}, P_{6}, P_{7} $ & 1 & 1 & 1 \\
-$ P_{3}, P_{5}, P_{6}, P_{7} $ & 0 & 0 & 0 \\
 $ P_{4}, P_{5}, P_{6}, P_{7} $ & 0 & 0 & 1 \\
 \bottomrule
 \end{tabular}
@@ -544,31 +482,31 @@ $ P_{4}, P_{5}, P_{6}, P_{7} $ & 0 & 0 & 1 \\
 \textbf{Права} & \textbf{$M_{y}$} & \textbf{$M_{z}$} & \textbf{$M_{t}$}\\
 \midrule
 $ P_{0}, P_{1} $ & 0 & 0 & 1 \\
-$ P_{0}, P_{2} $ & 1 & 0 & 1 \\
-$ P_{0}, P_{3} $ & 1 & 1 & 1 \\
-$ P_{0}, P_{4} $ & 1 & 1 & 0 \\
+$ P_{0}, P_{2} $ & 0 & 0 & 1 \\
+$ P_{0}, P_{3} $ & 1 & 0 & 1 \\
+$ P_{0}, P_{4} $ & 0 & 0 & 0 \\
 $ P_{0}, P_{5} $ & 0 & 0 & 1 \\
-$ P_{0}, P_{6} $ & 1 & 0 & 1 \\
-$ P_{0}, P_{7} $ & 0 & 1 & 1 \\
-$ P_{1}, P_{2} $ & 0 & 1 & 1 \\
-$ P_{1}, P_{3} $ & 0 & 0 & 1 \\
+$ P_{0}, P_{6} $ & 0 & 0 & 1 \\
+$ P_{0}, P_{7} $ & 0 & 0 & 1 \\
+$ P_{1}, P_{2} $ & 0 & 0 & 1 \\
+$ P_{1}, P_{3} $ & 1 & 0 & 1 \\
 $ P_{1}, P_{4} $ & 0 & 0 & 1 \\
-$ P_{1}, P_{5} $ & 0 & 1 & 1 \\
-$ P_{1}, P_{6} $ & 0 & 1 & 1 \\
+$ P_{1}, P_{5} $ & 0 & 0 & 0 \\
+$ P_{1}, P_{6} $ & 0 & 0 & 1 \\
 $ P_{1}, P_{7} $ & 0 & 0 & 1 \\
 $ P_{2}, P_{3} $ & 1 & 0 & 1 \\
-$ P_{2}, P_{4} $ & 1 & 0 & 1 \\
-$ P_{2}, P_{5} $ & 0 & 1 & 1 \\
-$ P_{2}, P_{6} $ & 1 & 1 & 1 \\
+$ P_{2}, P_{4} $ & 0 & 0 & 1 \\
+$ P_{2}, P_{5} $ & 0 & 0 & 1 \\
+$ P_{2}, P_{6} $ & 0 & 0 & 0 \\
 $ P_{2}, P_{7} $ & 0 & 0 & 1 \\
-$ P_{3}, P_{4} $ & 1 & 1 & 1 \\
-$ P_{3}, P_{5} $ & 0 & 0 & 1 \\
+$ P_{3}, P_{4} $ & 1 & 0 & 1 \\
+$ P_{3}, P_{5} $ & 1 & 0 & 1 \\
 $ P_{3}, P_{6} $ & 1 & 0 & 1 \\
-$ P_{3}, P_{7} $ & 0 & 1 & 1 \\
+$ P_{3}, P_{7} $ & 1 & 0 & 0 \\
 $ P_{4}, P_{5} $ & 0 & 0 & 1 \\
-$ P_{4}, P_{6} $ & 1 & 0 & 1 \\
-$ P_{4}, P_{7} $ & 0 & 1 & 1 \\
-$ P_{5}, P_{6} $ & 0 & 1 & 1 \\
+$ P_{4}, P_{6} $ & 0 & 0 & 1 \\
+$ P_{4}, P_{7} $ & 0 & 0 & 1 \\
+$ P_{5}, P_{6} $ & 0 & 0 & 1 \\
 $ P_{5}, P_{7} $ & 0 & 0 & 1 \\
 $ P_{6}, P_{7} $ & 0 & 0 & 1 \\
 \bottomrule
@@ -576,13 +514,13 @@ $ P_{6}, P_{7} $ & 0 & 0 & 1 \\
 \textbf{Точка} & \textbf{$M_{y}$} & \textbf{$M_{z}$} & \textbf{$M_{t}$}\\
 \midrule
 $ P_{0} $ & 0 & 0 & 1 \\
-$ P_{1} $ & 1 & 0 & 1 \\
-$ P_{2} $ & 1 & 1 & 1 \\
-$ P_{3} $ & 1 & 1 & 0 \\
+$ P_{1} $ & 0 & 0 & 1 \\
+$ P_{2} $ & 0 & 0 & 1 \\
+$ P_{3} $ & 1 & 0 & 1 \\
 $ P_{4} $ & 0 & 0 & 1 \\
-$ P_{5} $ & 1 & 0 & 1 \\
-$ P_{6} $ & 0 & 1 & 1 \\
-$ P_{7} $ & 0 & 1 & 1 \\
+$ P_{5} $ & 0 & 0 & 1 \\
+$ P_{6} $ & 0 & 0 & 1 \\
+$ P_{7} $ & 0 & 0 & 1 \\
 \bottomrule
 \end{tabular}
 \end{minipage} \hfill
